--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       }
     </script>
     <script src="particleObject.js" type="module"></script>
+    <script src="particleEmitter.js" type="module"></script>
     <script src="main.js" type="module"></script>
   </body>
 </html>
